--- a/src/app/shared/components/navigation-bottom-links/navigation-bottom-links.component.html
+++ b/src/app/shared/components/navigation-bottom-links/navigation-bottom-links.component.html
@@ -32,7 +32,10 @@
 
         <a [routerLink]="previousLink">
             <img src="assets/icons/left_arrow_link.svg" alt="Left arrow link" />
+            @if (previousTitle) {
+
             <span>{{ t(previousTitle) }}</span>
+            }
         </a>
         }
     </div>
@@ -51,7 +54,10 @@
         } @else {
 
         <a [routerLink]="nextLink">
+            @if (nextTitle) {
+
             <span>{{ t(nextTitle) }}</span>
+            }
             <img
                 src="assets/icons/right_arrow_link.svg"
                 alt="Right arrow link"
